--- a/koch/snowflake.html
+++ b/koch/snowflake.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Multithreaded Fractal Explorer</title>
+    <title>Fractal Explorer PWA</title>
+    <!-- PWA Metadata -->
+    <meta name="theme-color" content="#000000">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="https://p5js.org/assets/img/p5js.svg">
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <style>
         body {
@@ -161,7 +168,6 @@
             <div class="control-group">
                 <label>Petals</label>
                 <div class="slider-row">
-                    <!-- Updated min from 3 to 1 -->
                     <input type="range" id="petals-slider" min="1" max="24" step="1" value="8">
                     <span class="val-display" id="val-petals">8</span>
                 </div>
@@ -336,6 +342,15 @@
     </script>
 
     <script>
+        // PWA Service Worker Registration
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('sw.js')
+                    .then(reg => console.log('PWA Service Worker registered'))
+                    .catch(err => console.log('PWA Service Worker failed', err));
+            });
+        }
+
         let fractalTime = 0;
         let viewZoom = 0.67; 
         let viewOffsetX = 0;
@@ -476,7 +491,6 @@
             }
 
             push();
-            // Apply global pan
             translate(viewOffsetX, viewOffsetY);
             
             const ctx = drawingContext;
